// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: AMP Entry renders a landscape container with an amp-iframe and nested amp-img 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="true"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="http://foo.bar/iframe/amp"
        >
          <amp-img
            layout="fill"
            placeholder="true"
            src="http://foo.bar/placeholder.png"
          />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: AMP Entry renders a portrait container with amp-iframe and nested amp-img 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  padding-top: 177.78%;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="true"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="http://foo.bar/iframe/amp"
        >
          <amp-img
            layout="fill"
            placeholder="true"
            src="http://foo.bar/placeholder.png"
          />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: AMP Entry renders the audio skin 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="true"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
        >
          <amp-img
            layout="fill"
            placeholder="true"
          />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: Canonical Entry renders a landscape container with a placeholder image 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <img
      alt="Image Alt"
      class="c2"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a portrait container with a placeholder image 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c0 {
  padding-top: 177.78%;
  position: relative;
  overflow: hidden;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <img
      alt="Image Alt"
      class="c2"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders an iframe when showPlaceholder is false 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div
  class="c0"
>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="c1"
    scrolling="no"
    src="http://foo.bar/iframe"
  />
</div>
`;

exports[`Media Player: Canonical Entry renders the audio skin 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

.c0 {
  height: 165px;
  position: relative;
  overflow: hidden;
}

<div
  class="c0"
>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="c1"
    scrolling="no"
    src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
  />
</div>
`;
